[package]
name = "burst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.48.0"
rusoto_ec2 = "0.48.0"
ssh2 = "0.9.4"
rusoto_credential = "0.48.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-sync = "0.1"
failure = "0.1.8"
rand = "0.8"
tempfile = "3"
rayon = "1.8.0"

[examples]
example1 = { name = "test1", path = "examples/test1.rs" }

[profile.release]
debug = true